docs: Add Container Application Resource Optimization